Finished Bool Commands and Implemented colors

--- a/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
+++ b/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Commands.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
