Removed "Room.cpp"
no need for using it

--- a/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
+++ b/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
@@ -12,8 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Commands.cpp" />
-    <ClCompile Include="Room.cpp" />
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Commands.h" />
