--- a/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj.filters
+++ b/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj.filters
@@ -15,13 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Room.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Commands.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="World.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
