Created Door.h, erased main.cpp permanently & Fixed errors in World.cpp

--- a/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
+++ b/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Commands.h" />
+    <ClInclude Include="Door.h" />
     <ClInclude Include="Room.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
