Implemented map.cpp and its header, Changed World.cpp and created world.h... (major fixes)
Implemented Player.cpp, player.h, World.h, Map.cpp, Map.h. Door.h was
changed slightly

--- a/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
+++ b/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
@@ -12,11 +12,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Commands.cpp" />
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Room.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Commands.h" />
     <ClInclude Include="Door.h" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="World.h" />
     <ClInclude Include="Room.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
