--- a/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
+++ b/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="Commands.h" />
     <ClInclude Include="Door.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="MemLeaks.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="World.h" />
     <ClInclude Include="Room.h" />
