Revert "Deleted Door.h and createted booleans and functions for rooms"
This reverts commit f25e19b2fc4df74d346850c971af1eee3412a395.

--- a/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
+++ b/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Commands.h" />
+    <ClInclude Include="Door.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="MemLeaks.h" />
     <ClInclude Include="Player.h" />
