--- a/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
+++ b/The Shinning. A Zork-Like Game/The Shinning. A Zork-Like Game.vcxproj
@@ -10,24 +10,8 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Commands.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Map.cpp" />
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="Room.cpp" />
-    <ClCompile Include="World.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Commands.h" />
-    <ClInclude Include="Map.h" />
-    <ClInclude Include="MemLeaks.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="World.h" />
-    <ClInclude Include="Room.h" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{B14420D6-E03C-43E6-AB4D-529F42E018C4}</ProjectGuid>
+    <ProjectGuid>{B395A1AF-3B08-4411-A457-EE196814EDEE}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>TheShinningAZorkLikeGame</RootNamespace>
   </PropertyGroup>
@@ -93,6 +77,23 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="Commands.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Room.cpp" />
+    <ClCompile Include="World.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Commands.h" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="MemLeaks.h" />
+    <ClInclude Include="p2String.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Room.h" />
+    <ClInclude Include="World.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
